fixed minor layout issues

--- a/src/components/Pages/About/About.css
+++ b/src/components/Pages/About/About.css
@@ -60,7 +60,12 @@ h1 {
   }
 
   .about-text > p {
-    color: #23aed1;
     font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  #welcome-header {
+    white-space: normal;
   }
 }
