--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -102,6 +102,7 @@
     width: 100%;
     height: auto;
     max-width: 600px;
+    min-width: 300px;
     /* padding-bottom: 60px; */
   }
 
